--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,11 +32,14 @@
             <div class="col-md-4 order-md-1 order-2 p-2">
                 <h3 class="mb-3" style="letter-spacing: 2px;">Taking your physical event virtual?</h3>
                 <p>In this together. Keeping you securely connected wherever you are.</p>
-                <div class="mb-5 mt-4 text-nowrap"> 
-                    <a  href='/join' class="btn btn-warning px-4">Create Room</a>
-                    <button class="btn rounded-circle" style="position: relative;z-index:1000;left:-12px">or</button>
-                    <button class="btn btn-success px-4 join" style="margin-left: -26px;">Join Room</button>
+                <div class="mb-5 mt-4 text-center">
+                    <div class="text-nowrap"> 
+                        <a  href='/join' class="btn btn-warning px-4">Create Room</a>
+                        <button class="btn rounded-circle" style="position: relative;z-index:1000;left:-12px">or</button>
+                        <button class="btn btn-success px-4 join" style="margin-left: -26px;">Join Room</button>
+                    </div>
                 </div>
+                
                 <div class="w-100 py-4 bg-white px-3 text-center meeting_container" style="box-shadow: 0px 0px 5px 1px #ccc;">
                     <h5>Join a Meeting</h5>
                     <input type="text" class="form-control my-4 meeting_link" placeholder="Meeting link">
