--- a/views/room.ejs
+++ b/views/room.ejs
@@ -79,7 +79,7 @@
 
             </div>
             <div class="main__message_container">
-                <input id="chat_message" type="text" placeholder="Type message here...">
+                <input id="chat_message" class="form-control" type="text" placeholder="Type message here...">
             </div>
 
         </div>
