--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 .main {
     display: flex;
     height: 100vh;
+    overflow: hidden;
 }
 
 .video_container {
@@ -15,21 +16,44 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 40px;
+    overflow: hidden;
 }
 
 #video-grid {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    width: 100%;
+    height:auto;
+    overflow-y: scroll;
+     
 }
 
-video {
+/* video {
     height: auto;
     width: 30%;
     object-fit: cover;
     padding: 8px;
-}
+} */
+@media screen and (max-width: 320px) {
+    .video{
+        min-width: 100px;
+        min-height: 100px;
+    }
+ }
+ @media screen and (min-width: 321px) {
+    .video{
+        min-width: 150px;
+        min-height: 150px;
+    }
+ }
+ @media screen and (min-width: 768px) {
+    .video{
+        min-width: 200px;
+        min-height: 200px;
+    }
+ }
+
 
 .control_container {
     color: #D2D2D2;
@@ -70,7 +94,7 @@ video {
 }
 
 
-.audio, .video {
+.audio, .playstop {
     color: #CC3B33;
 }
 
@@ -123,3 +147,28 @@ video {
 .main__message_container input:focus {
     box-shadow: none !important;
 }
+
+
+/*scrollbar design */
+
+      /* width */
+      ::-webkit-scrollbar {
+        width: 0px;
+      }
+      
+      /* Track */
+      ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px #ccc; 
+        border-radius: 5px;
+      }
+       
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%); 
+        border-radius: 10px;
+      }
+      
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+        background: #22AEB8; 
+      }
