--- a/views/room.ejs
+++ b/views/room.ejs
@@ -16,6 +16,27 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
+    <style>
+        @media screen and (max-width: 320px) {
+            .video{
+                min-width: 100px;
+                min-height: 100px;
+            }
+         }
+         @media screen and (min-width: 321px) {
+            .video{
+                min-width: 150px;
+                min-height: 150px;
+            }
+         }
+         @media screen and (min-width: 768px) {
+            .video{
+                min-width: 200px;
+                min-height: 200px;
+            }
+         }
+        
+    </style>
 </head>
 
 <body>
@@ -35,7 +56,7 @@
                         <span>Mute</span>
                     </div>
                     <div onclick="playStop()" class="main__controls__button main__video_button">
-                        <i class="d-none fas fa-slash video mb-4" style="position: absolute;"></i><i class="fas fa-video"></i>
+                        <i class="d-none fas fa-slash playstop mb-4" style="position: absolute;"></i><i class="fas fa-video"></i>
                         <span>Stop Video</span>
                     </div>
                 </div>
@@ -84,7 +105,20 @@
 
         </div>
     </div>
-    
+
+    <script>
+        var width = ($("#video-grid").innerWidth());
+        console.log(width);
+        var height = $("#video-grid").innerHeight();
+        var child = $("#video-grid video").length
+        console.log(child);
+        var count = 0;
+         
+        
+        $(".video").css("width",width/child);
+        $(".video").css("height","auto");
+    </script>
+       
 
     <script>
         const roomId = "<%= roomId %>";
