--- a/views/room.ejs
+++ b/views/room.ejs
@@ -93,8 +93,39 @@
             <div class="main__header">
                 <h6>Chat</h6>
             </div>
-            <div class="main__chat_window">
-                <ul class="messages">
+            <div class="main__chat_window bg-white">
+                <ul class="messages pt-3 pl-0">
+
+                    <!-- incomming female -->
+                    <!-- <div class="incomming">
+                        <div class="d-flex justify-content-between px-3 mb-1">
+                            <small>Nidhi Goyel</small>
+                            <small>12 Sep 11:27 pm</small>
+                        </div>
+                        <div class="media px-3">
+                            <div class="rounded-circle text-center text-light">
+                                <img class="direct-chat-img" src="https://img.icons8.com/office/36/000000/person-female.png" alt="message user image">
+                            </div>
+                            <div class="media-body bg-warning p-2 rounded ml-2">
+                                <p>For what reason would it be advisable for me to think about business content?</p>
+                            </div>
+                        </div>
+                    </div> -->
+
+                    <!-- <div class="outgoing mt-3">
+                        <div class="d-flex justify-content-between px-3 mb-1">
+                            <small>12 Sep 11:27 pm</small>
+                            <small>Sourav Santra</small>
+                        </div>
+                        <div class="media px-3">
+                            <div class="media-body bg-info text-light p-2 rounded mr-2">
+                                <p>For what reason would it be ?</p>
+                            </div>
+                            <div class="rounded-circle text-center text-light">
+                                <img class="direct-chat-img" src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="message user image">
+                            </div>
+                        </div>
+                    </div> -->
 
                 </ul>
 
